    'repeat_lang' has been set.
    - Set repeat_lang="LOCALE" per default. menu-methods now only need to set
    outputencoding in order to enable translations. Closes: #37716.
    - Update Danish menu translation.
    - Fixed a problem with su-to-root script where a X application didnt have
    access to run on the server. Closes: #150314
    - Fix compilation with g++ 2.95.
  * Fixed some inconsistent behaviour with "substitute section->section"
  * Update Brazillian menu messages translation. Thanks André Luís Lopes. 
  * Add Norwegian nynorsk menu messages and sections translations. 
    Thanks Håvard Korsvoll.
  * Add Swedish menu messages and sections translation. Thanks Jens Arvidsson.
  * Update Spanish menu sections translation and add Spanish menu messages
    translation. Thanks Javier Fernandez-Sanguino Peña.
  * Update Japanese menu sections translation and add Japanese menu messages
    translation. Thanks Goto Masanori.
  * Update Dutch menu messages translation. Closes: #239324. 
    Thanks Tim Dijkstra.

 -- Bill Allombert <ballombe@debian.org>  Fri, 12 Mar 2004 15:27:16 +0100

menu (2.1.10-1) unstable; urgency=low

  * The "Friday 12" release.
  * Morten Brix Pedersen:
    - replacewith($str, $replace, $with) now outputs an error if $replace and
    $with isn't the same length.
    - Don't segfault when there are syntax errors in translate_menus
      (Closes: #221757)
    - Unknown identifiers now generates a warning instead of an error.
    - Implement a replace() function. Closes: #223948
    - Modify basename() function to do as advertised in the documentation.
    - When conversion for a translated menu section failed, fallback to the
    original string.
    - Implement a shell() function.
  * Update Dutch menu message translation. Closes: #230525. Thanks Tim
    Dijkstra.
  * Add Chinese menu messages and sections translations. Closes: #232403.
    Thanks Carlos Z.F. Liu and Yongtao Yang.