@@ -14,7 +14,8 @@ menu (2.1.10-2) unstable; urgency=low
     - Fixed a problem with su-to-root script where a X application didnt have
     access to run on the server. Closes: #150314
     - Fix compilation with g++ 2.95.
-  * Fixed some inconsistent behaviour with "substitute section->section"
+  * Fixed some inconsistent behaviour with "substitute section->section".
+    Closes: #216851
   * Update Brazillian menu messages translation. Thanks André Luís Lopes. 
   * Add Norwegian nynorsk menu messages and sections translations. 
     Thanks Håvard Korsvoll.
